--- a/.github/actions/keras_application_test/action.yml
+++ b/.github/actions/keras_application_test/action.yml
@@ -28,6 +28,7 @@ runs:
           pip install "protobuf~=3.20"
           pip install h5py==3.7.0
           pip install parameterized
+          pip install tokenizers
           pip install timeout-decorator
           pip install coloredlogs flatbuffers
           pip install tensorflow==${{ inputs.tf_version }}
