Refresh transformers version.
Signed-off-by: Jay Zhang <jiz@microsoft.com>

--- a/.github/actions/keras_application_test/action.yml
+++ b/.github/actions/keras_application_test/action.yml
@@ -48,7 +48,7 @@ runs:
           pip install git+https://www.github.com/keras-team/keras-contrib.git
           pip install keras-tcn==2.8.3
           pip install git+https://github.com/qubvel/efficientnet
-          pip install transformers==4.2.0
+          pip install transformers
           pip install keras-self-attention
           pip install pytest pytest-cov pytest-runner
           pip install "numpy<2"
