--- a/.github/actions/keras_application_test/action.yml
+++ b/.github/actions/keras_application_test/action.yml
@@ -47,17 +47,19 @@ runs:
           pip install git+https://www.github.com/keras-team/keras-contrib.git
           pip install keras-tcn==2.8.3
           pip install git+https://github.com/qubvel/efficientnet
+          pip install keras-self-attention
+          pip install pytest pytest-cov pytest-runner
+
           if [[ ${{ inputs.tf_version }} == 1.* ]]; then 
               pip install keras==2.3.1
               pip install transformers==4.2.0
               pip uninstall -y h5py
               pip install h5py==2.9.0
+              pip install numpy==1.19.0
           else 
               pip install transformers
+              pip install "numpy<2"
           fi
-          pip install keras-self-attention
-          pip install pytest pytest-cov pytest-runner
-          pip install "numpy<2"
 
           pip install -e .
 
