--- a/.github/actions/keras_application_test/action.yml
+++ b/.github/actions/keras_application_test/action.yml
@@ -58,6 +58,7 @@ runs:
               pip install numpy==1.19.0
           else 
               pip install transformers
+              pip install tf_keras
               pip install "numpy<2"
           fi
 
