--- a/.github/actions/keras_unit_test/action.yml
+++ b/.github/actions/keras_unit_test/action.yml
@@ -24,6 +24,7 @@ runs:
           python -m pip install --upgrade pip
           pip install onnxconverter-common
           pip install onnx==${{ inputs.onnx_version }}
+          pip install tf_keras
           pip install h5py==3.7.0
           pip install parameterized
           pip install timeout-decorator
