Update ubuntu version for python 3.7.
Signed-off-by: Jay Zhang <jiz@microsoft.com>

--- a/.github/actions/keras_application_test/action.yml
+++ b/.github/actions/keras_application_test/action.yml
@@ -72,5 +72,7 @@ runs:
       run: |
           python -c "import onnxruntime"
           pytest tests/keras2onnx_unit_tests --doctest-modules --junitxml=junit/test-results.xml
+
+          export TF_USE_LEGACY_KERAS=True
           cd tests/keras2onnx_applications/nightly_build
           python run_all_v2.py
