--- a/.github/workflows/unit_test_ci.yml
+++ b/.github/workflows/unit_test_ci.yml
@@ -91,7 +91,7 @@ jobs:
           - name: 'py37-tf1.15'
             tf_version: '1.15.5'
             python_version: '3.7'
-            os: 'ubuntu-latest'
+            os: 'ubuntu-22.04'
             opset_version: '15'
             ort_version: '1.14.1'
             onnx_version: '1.14.1'
