--- a/.github/workflows/pretrained_model_test_ci.yml
+++ b/.github/workflows/pretrained_model_test_ci.yml
@@ -74,17 +74,17 @@ jobs:
       fail-fast: false
       matrix:
         name:
-          - 'py38-tf2.17'
+          - 'py39-tf2.17'
           - 'py39-tf2.18'
-        os: ['ubuntu-latest', 'windows-2022']
+        os: ['ubuntu-22.04', 'windows-2022']
         opset_version: ['18', '15']
         ort_version: ['1.16.3']
         onnx_version: ['1.16.1']
         skip_tflite: ['False']
         include:
-          - name: 'py39-tf2.17'
-            tf_version: '2.17.0'
-            python_version: '3.9'
+          - name: 'py38-tf2.13'
+            tf_version: '2.13.1'
+            python_version: '3.8'
           - name: 'py39-tf2.18'
             tf_version: '2.18.0'
             python_version: '3.9'
@@ -96,7 +96,7 @@ jobs:
             ort_version: '1.14.1'
             onnx_version: '1.14.1'
 
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
 
     steps:
       - name: Checkout code
