--- a/.github/actions/keras_application_test/action.yml
+++ b/.github/actions/keras_application_test/action.yml
@@ -32,7 +32,7 @@ runs:
           pip install coloredlogs flatbuffers
           pip install tensorflow==${{ inputs.tf_version }}
           pip install onnxruntime==${{ inputs.ort_version }}
-          pip install Pillow==8.2.0
+          pip install pillow
           pip install opencv-python
           pip install tqdm
           pip install keras-segmentation==0.2.0
