--- a/.github/workflows/keras_application_test_ci.yml
+++ b/.github/workflows/keras_application_test_ci.yml
@@ -66,7 +66,7 @@ jobs:
   Test_py37_with_tf1_15: # Do not change this name because it is used in Ruleset of this repo.
     strategy:
       fail-fast: false
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
       - name: Checkout code
@@ -92,15 +92,15 @@ jobs:
       fail-fast: false
       matrix:
         name:
-          - 'py39-tf2.10'
+          - 'py38-tf2.13'
           - 'py39-tf2.15'
         os: ['ubuntu-latest', 'windows-2022']
         ort_version: ['1.16.3']
         onnx_version: ['1.16.1']
         include:
-          - name: 'py39-tf2.10'
-            tf_version: '2.10.0'
-            python_version: '3.9'
+          - name: 'py38-tf2.13'
+            tf_version: '2.13.0'
+            python_version: '3.8'
           - name: 'py39-tf2.15'
             tf_version: '2.15.0'
             python_version: '3.9'
