--- a/.github/workflows/pretrained_model_test_ci.yml
+++ b/.github/workflows/pretrained_model_test_ci.yml
@@ -15,7 +15,7 @@ concurrency:
 
 jobs:
 
-  Test_min_py_with_min_tf: # Do not change this name because it is used in 'publish-test-results' section below.
+  Test_min_py38_with_min_tf: # Do not change this name because it is used in 'publish-test-results' section below.
     strategy:
       fail-fast: false
     runs-on: ubuntu-latest
@@ -42,7 +42,7 @@ jobs:
           name: Test Results (Py38-TF2.9-18-ubuntu)
           path: ./**/test-results-*.xml
 
-  Test_max_py_with_latest_tf: # Do not change this name because it is used in 'publish-test-results' section below.
+  Test_max_py310_with_latest_tf: # Do not change this name because it is used in 'publish-test-results' section below.
     strategy:
       fail-fast: false
     runs-on: ubuntu-latest
@@ -67,6 +67,33 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: Test Results (Py310-TF2.18-18-ubuntu)
+          path: ./**/test-results-*.xml
+
+  Test_max_py312_with_latest_tf: # Do not change this name because it is used in 'publish-test-results' section below.
+    strategy:
+      fail-fast: false
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Run Tests (Py312-TF2.18-18)
+        uses: ./.github/actions/pretrained_model_test
+        with:
+          os: 'ubuntu-latest'
+          tf_version: '2.18.0'
+          python_version: '3.12'
+          ort_version: '1.20.1'
+          onnx_version: '1.17.0'
+          opset_version: '18'
+          skip_tflite: 'False'
+
+      - name: Upload Test Results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: Test Results (Py312-TF2.18-18-ubuntu)
           path: ./**/test-results-*.xml
 
   Test_py37_with_tf1_15: # Do not change this name because it is used in 'publish-test-results' section below.
@@ -139,7 +166,7 @@ jobs:
 
   publish-test-results:
     name: "Publish Tests Results to Github"
-    needs: [Test_min_py_with_min_tf, Test_max_py_with_latest_tf, Test_py37_with_tf1_15, Extra_tests]
+    needs: [Test_min_py38_with_min_tf, Test_max_py310_with_latest_tf, Test_max_py312_with_latest_tf, Test_py37_with_tf1_15, Extra_tests]
     runs-on: ubuntu-latest
     permissions:
       checks: write
