--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.9  # Specify the desired Python version (e.g., 3.8, 3.9)
+          python-version: 3.11
 
       - name: Install dependencies
         run: pip install pylint==2.4.4
