--- a/.github/workflows/keras_application_test_ci.yml
+++ b/.github/workflows/keras_application_test_ci.yml
@@ -29,8 +29,8 @@ jobs:
         with:
           tf_version: '2.9.0'
           python_version: '3.8'
-          ort_version: '1.20.1'
-          onnx_version: '1.17.0'
+          ort_version: '1.16.3'
+          onnx_version: '1.16.1'
 
       - name: Upload Test Results
         if: always()
@@ -94,16 +94,36 @@ jobs:
         name:
           - 'py38-tf2.13'
           - 'py39-tf2.15'
+          - 'py310-tf2.18'
+          - 'py311-tf2.18'
+          - 'py312-tf2.18'
         os: ['ubuntu-latest', 'windows-2022']
-        ort_version: ['1.20.1']
-        onnx_version: ['1.17.0']
         include:
           - name: 'py38-tf2.13'
             tf_version: '2.13.0'
             python_version: '3.8'
+            ort_version: '1.16.3'
+            onnx_version: '1.16.1'
           - name: 'py39-tf2.15'
             tf_version: '2.15.0'
             python_version: '3.9'
+            ort_version: '1.16.3'
+            onnx_version: '1.16.1'
+          - name: 'py310-tf2.18'
+            tf_version: '2.18.0'
+            python_version: '3.10'
+            ort_version: '1.20.1'
+            onnx_version: '1.17.0'
+          - name: 'py311-tf2.18'
+            tf_version: '2.18.0'
+            python_version: '3.11'
+            ort_version: '1.20.1'
+            onnx_version: '1.17.0'
+          - name: 'py312-tf2.18'
+            tf_version: '2.18.0'
+            python_version: '3.12'
+            ort_version: '1.20.1'
+            onnx_version: '1.17.0'
     runs-on: ${{ matrix.os }}
 
     steps:
