--- a/.github/actions/keras_unit_test/action.yml
+++ b/.github/actions/keras_unit_test/action.yml
@@ -36,7 +36,9 @@ runs:
           if [[ ${{ inputs.tf_version }} == 1.* ]]; then 
               pip install numpy==1.19.0
           else 
-              pip install tf_keras==${{ inputs.tf_version }}
+              if [[ ${{ inputs.tf_version }} != 2.13 ]]; then 
+                pip install tf_keras==${{ inputs.tf_version }}
+              fi
           fi
 
           pip install -e .
