--- a/.github/workflows/keras_unit_test_ci.yml
+++ b/.github/workflows/keras_unit_test_ci.yml
@@ -14,7 +14,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  Test_min_py38_with_min_tf: # Do not change this name because it is used in Ruleset of this repo.
+  Test_min_py38_tf2_9: # Do not change this name because it is used in Ruleset of this repo.
     strategy:
       fail-fast: false
     runs-on: ubuntu-latest
@@ -38,7 +38,7 @@ jobs:
           name: Test Results (Py38-TF2.9-ubuntu)
           path: ./**/test-results-*.xml
 
-  Test_max_py310_with_latest_tf: # Do not change this name because it is used in Ruleset of this repo.
+  Test_max_py310_tf2_18: # Do not change this name because it is used in Ruleset of this repo.
     strategy:
       fail-fast: false
     runs-on: ubuntu-latest
@@ -62,7 +62,7 @@ jobs:
           name: Test Results (Py310-TF2.18-ubuntu)
           path: ./**/test-results-*.xml
 
-  Test_max_py311_with_latest_tf: # Do not change this name because it is used in Ruleset of this repo.
+  Test_max_py311_tf2_18: # Do not change this name because it is used in Ruleset of this repo.
     strategy:
       fail-fast: false
     runs-on: ubuntu-latest
@@ -86,7 +86,7 @@ jobs:
           name: Test Results (Py311-TF2.18-ubuntu)
           path: ./**/test-results-*.xml
 
-  Test_max_py312_with_latest_tf: # Do not change this name because it is used in Ruleset of this repo.
+  Test_max_py312_tf2_18: # Do not change this name because it is used in Ruleset of this repo.
     strategy:
       fail-fast: false
     runs-on: ubuntu-latest
@@ -134,23 +134,43 @@ jobs:
           name: Test Results (Py37-TF1.15-ubuntu)
           path: ./**/test-results-*.xml
 
-  Extra_tests:
+  Extra_tests2:
     strategy:
       fail-fast: false
       matrix:
         name:
-          - 'py39-tf2.10'
+          - 'py38-tf2.13'
           - 'py39-tf2.15'
+          - 'py310-tf2.18'
+          - 'py311-tf2.18'
+          - 'py312-tf2.18'
         os: ['ubuntu-latest', 'windows-2022']
-        ort_version: ['1.20.1']
-        onnx_version: ['1.17.0']
         include:
-          - name: 'py39-tf2.10'
-            tf_version: '2.10.0'
-            python_version: '3.9'
+          - name: 'py38-tf2.13'
+            tf_version: '2.13.0'
+            python_version: '3.8'
+            ort_version: '1.16.3'
+            onnx_version: '1.16.1'
           - name: 'py39-tf2.15'
             tf_version: '2.15.0'
             python_version: '3.9'
+            ort_version: '1.16.3'
+            onnx_version: '1.16.1'
+          - name: 'py310-tf2.18'
+            tf_version: '2.18.0'
+            python_version: '3.10'
+            ort_version: '1.20.1'
+            onnx_version: '1.17.0'
+          - name: 'py311-tf2.18'
+            tf_version: '2.18.0'
+            python_version: '3.11'
+            ort_version: '1.20.1'
+            onnx_version: '1.17.0'
+          - name: 'py312-tf2.18'
+            tf_version: '2.18.0'
+            python_version: '3.12'
+            ort_version: '1.20.1'
+            onnx_version: '1.17.0'
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -173,7 +193,7 @@ jobs:
 
   publish-test-results:
     name: "Publish Tests Results to Github"
-    needs: [Test_min_py38_with_min_tf, Test_max_py310_with_latest_tf, Test_max_py311_with_latest_tf, Test_max_py312_with_latest_tf, Test_py37_with_tf1_15, Extra_tests]
+    needs: [Test_min_py38_tf2_9, Test_max_py310_tf2_18, Test_max_py311_tf2_18, Test_max_py312_tf2_18, Test_py37_with_tf1_15, Extra_tests]
     runs-on: ubuntu-latest
     permissions:
       checks: write
