--- a/.github/workflows/keras_unit_test_ci.yml
+++ b/.github/workflows/keras_unit_test_ci.yml
@@ -14,7 +14,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  Test_min_py38_tf2_9: # Do not change this name because it is used in Ruleset of this repo.
+  Test2_py38_tf2_9: # Do not change this name because it is used in Ruleset of this repo.
     strategy:
       fail-fast: false
     runs-on: ubuntu-latest
@@ -38,7 +38,7 @@ jobs:
           name: Test Results (Py38-TF2.9-ubuntu)
           path: ./**/test-results-*.xml
 
-  Test_max_py310_tf2_18: # Do not change this name because it is used in Ruleset of this repo.
+  Test2_py310_tf2_18: # Do not change this name because it is used in Ruleset of this repo.
     strategy:
       fail-fast: false
     runs-on: ubuntu-latest
@@ -62,7 +62,7 @@ jobs:
           name: Test Results (Py310-TF2.18-ubuntu)
           path: ./**/test-results-*.xml
 
-  Test_max_py311_tf2_18: # Do not change this name because it is used in Ruleset of this repo.
+  Test2_py311_tf2_18: # Do not change this name because it is used in Ruleset of this repo.
     strategy:
       fail-fast: false
     runs-on: ubuntu-latest
@@ -86,7 +86,7 @@ jobs:
           name: Test Results (Py311-TF2.18-ubuntu)
           path: ./**/test-results-*.xml
 
-  Test_max_py312_tf2_18: # Do not change this name because it is used in Ruleset of this repo.
+  Test2_py312_tf2_18: # Do not change this name because it is used in Ruleset of this repo.
     strategy:
       fail-fast: false
     runs-on: ubuntu-latest
@@ -110,7 +110,7 @@ jobs:
           name: Test Results (Py312-TF2.18-ubuntu)
           path: ./**/test-results-*.xml
 
-  Test_py37_with_tf1_15: # Do not change this name because it is used in Ruleset of this repo.
+  Test2_py37_with_tf1_15: # Do not change this name because it is used in Ruleset of this repo.
     strategy:
       fail-fast: false
     runs-on: ubuntu-22.04
@@ -193,7 +193,7 @@ jobs:
 
   publish-test-results:
     name: "Publish Tests Results to Github"
-    needs: [Test_min_py38_tf2_9, Test_max_py310_tf2_18, Test_max_py311_tf2_18, Test_max_py312_tf2_18, Test_py37_with_tf1_15, Extra_tests]
+    needs: [Test2_py38_tf2_9, Test2_py310_tf2_18, Test2_py311_tf2_18, Test2_py312_tf2_18, Test2_py37_with_tf1_15, Extra_tests2]
     runs-on: ubuntu-latest
     permissions:
       checks: write
