--- a/.github/workflows/pretrained_model_test_ci.yml
+++ b/.github/workflows/pretrained_model_test_ci.yml
@@ -15,7 +15,7 @@ concurrency:
 
 jobs:
 
-  Test_min_py38_tf2_9: # Do not change this name because it is used in 'publish-test-results' section below.
+  Test3_py38_tf2_9: # Do not change this name because it is used in 'publish-test-results' section below.
     strategy:
       fail-fast: false
     runs-on: ubuntu-latest
@@ -42,7 +42,7 @@ jobs:
           name: Test Results (Py38-TF2.9-18-ubuntu)
           path: ./**/test-results-*.xml
 
-  Test_max_py310_tf2_18: # Do not change this name because it is used in 'publish-test-results' section below.
+  Test3_py310_tf2_18: # Do not change this name because it is used in 'publish-test-results' section below.
     strategy:
       fail-fast: false
     runs-on: ubuntu-latest
@@ -69,7 +69,7 @@ jobs:
           name: Test Results (Py310-TF2.18-18-ubuntu)
           path: ./**/test-results-*.xml
 
-  Test_max_py312_tf2_18: # Do not change this name because it is used in 'publish-test-results' section below.
+  Test3_py312_tf2_18: # Do not change this name because it is used in 'publish-test-results' section below.
     strategy:
       fail-fast: false
     runs-on: ubuntu-latest
@@ -96,7 +96,7 @@ jobs:
           name: Test Results (Py312-TF2.18-18-ubuntu)
           path: ./**/test-results-*.xml
 
-  Test_py37_with_tf1_15: # Do not change this name because it is used in 'publish-test-results' section below.
+  Test3_py37_with_tf1_15: # Do not change this name because it is used in 'publish-test-results' section below.
     strategy:
       fail-fast: false
     runs-on: ubuntu-22.04
@@ -186,7 +186,7 @@ jobs:
 
   publish-test-results:
     name: "Publish Tests Results to Github"
-    needs: [Test_min_py38_tf2_9, Test_max_py310_tf2_18, Test_max_py312_tf2_18, Test_py37_with_tf1_15, Extra_tests]
+    needs: [Test3_py38_tf2_9, Test3_py310_tf2_18, Test3_py312_tf2_18, Test3_py37_with_tf1_15, Extra_tests3]
     runs-on: ubuntu-latest
     permissions:
       checks: write
